--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@hookform/resolvers": "^5.2.2",
+    "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.17",
     "better-sqlite3": "^12.5.0",
     "bootstrap": "^4.6.2",
