--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.559.0",
     "react-hook-form": "^7.69.0",
     "react-router-dom": "^7.10.1",
+    "rifm": "^0.12.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vite-plugin-static-copy": "^3.1.4",
@@ -51,7 +52,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "electron": "^39.2.6",
-    "electron-builder": "^26.0.12",
+    "electron-builder": "^23.0.6",
     "electron-vite": "^5.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
